--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,36 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
+  <header>
+     <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
+     <div id='nav-bar'>
+       <nav>
+         <ul>
+           <% if user_signed_in? %>
+             <li>
+               <%= "Welcome #{current_user.name}" %>
+             </li>
+             <li>
+               <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+             </li>
+             <li>
+               <%= link_to('Edit registration', edit_user_registration_path) %>
+             </li>
+             <li>
+               <%= link_to("My Profile", current_user) %>
+             </li>
+               <% else %>
+             <li>
+               <%= link_to('Login', new_user_session_path)  %>
+             </li>
+             <li>
+               <%= link_to('Register', new_user_registration_path) %>
+             </li>
+           <% end %>
+         </ul>
+       </nav>
+     </header>
 
   <body>
     <%= yield %>
