--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
-<span class="user_profile"><h2><%=@user.username%>'s Profile</h2></span>
+<span class="user_profile"><h2><%=@user.name%>'s Profile</h2></span>
 
 <div class="container">
-  <h3>All of <%= @user.username%>'s Post</h3>
+  <h3>All of <%= @user.name%>'s Post</h3>
     <ul>
       <%= @user.posts.each do |post| %>
       <%= post.content %>
       <%= post.created_at %>
+      <% end %>
     </ul>
 </div>
