--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
-<span class="user_profile"><h2><%=@user.name%>'s Profile</h2></span>
+<span class="user_profile"><h2><%=@user.name.capitalize%>'s Profile</h2></span>
 
-<div class="container">
-  <h3>All of <%= @user.name%>'s Post</h3>
+<div class="timeline">
+  <h3>Timeline</h3>
     <ul>
-      <%= @user.posts.each do |post| %>
+      <% @user.posts.each do |post| %>
       <%= post.content %>
       <%= post.created_at %>
       <% end %>
