--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,7 @@
   <header>
      <p class="notice"><%= notice %></p>
      <p class="alert"><%= alert %></p>
-     <div id='nav-bar'>
-       <nav>
+       <nav id='nav-bar'>
          <ul>
            <% if user_signed_in? %>
              <li>
