--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,9 +8,13 @@
     <%if current_user%>
       <h4><%= link_to 'New Post', new_post_path%></h4>
         <%@posts.each do |post|%>
-          <%=post%>
+        <div>
+          <%=post.content%> <%= link_to User.find(post.user_id).name, User.find(post.user_id) %>
+          <% if current_user && current_user.id == post.user_id %>
           <%= link_to 'Edit', edit_post_path(post)%>
           <%= link_to 'Destroy', post_path(post), method: :delete, data: {confirm: 'Are you sure you want to delete this post>'}%>
+          <% end %>
+        </div>
         <%end%>
     <%end%>
   </body>
